Change the style to seprate directory

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="application/ld+json">
 {"name":"Sign In","description":"Simple sign in page","@type":"WebSite","url":"https://sign-in.github.com/","headline":"Sign In"}</script>
 </head>
-<link href="css/style.css" >
+<link rel="stylesheet" href="css/style.css" >
 
 <body>
     <div class="container">
