Move signin to seprate directory

--- a/signin/index.html
+++ b/signin/index.html
@@ -30,7 +30,7 @@
                     <h3 class="header">Sign In</h3>
                 </div>
                 <div class="card-body">
-                    <form action="" id="frmLogin">
+                    <form id="frmLogin">
                         <div class="form-group">
                             <label class="form-label">Username</label>
                             <input class="form-control" name="username" id="txtUsername" type="text">
@@ -47,7 +47,7 @@
                 </div>
               <div class="card-footer">
                         <span> <a href="#">   forget password?</a></span>
-                         <span>Don't have account? <a href="signin/index.html">Click here</span></a>
+                         <span>Don't have account? <a href="">Click here</span></a>
                         </div>
             </div>
         </div>
