--- a/signin/index.html
+++ b/signin/index.html
@@ -2,23 +2,30 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="content-language" content="en-gb">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Sign In | Simple singi-in page </title>
-<meta property="og:title" content="Sign In" />
-<meta property="og:locale" content="en_IN" />
-<meta name="description" content="Simple sign in page" />
-<meta property="og:description" content="Simple sign in page" />
-<link rel="canonical" href="https://sign-in.github.com/" />
-<meta property="og:url" content="https://sign-in.github.com/" />
-<meta property="og:site_name" content="Sign In" />
-<script type="application/ld+json">
-{"name":"Sign In","description":"Simple sign in page","@type":"WebSite","url":"https://sign-in.github.com/","headline":"Sign In"}</script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="content-language" content="en-gb">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Sign In | Simple singi-in page </title>
+    <meta property="og:title" content="Sign In" />
+    <meta property="og:locale" content="en_IN" />
+    <meta name="description" content="Simple sign in page" />
+    <meta property="og:description" content="Simple sign in page" />
+    <link rel="canonical" href="https://saravanajd.github.io/signin/index.html" />
+    <meta property="og:url" content="https://saravanajd.github.io/signin/index.html" />
+    <meta property="og:site_name" content="Sign In" />
+    <script type="application/ld+json">
+        {
+            "name": "Sign In",
+            "description": "Simple sign in page",
+            "@type": "WebSite",
+            "url": "https://saravanajd.github.io/signin/index.html",
+            "headline": "Sign In"
+        }
+    </script>
+    <link rel="shortcut icon" type="img/ico" href="favicon.ico">
 </head>
-<link rel="stylesheet" href="css/style.css" >
-
+<link rel="stylesheet" href="css/style.css">
 <body>
     <div class="container">
         <div class="main sign-in">
@@ -42,15 +49,20 @@
                         <div class="form-group">
                             <button type="submit" class="btn" id="btnSignIn">Sign In</button>
                         </div>
-                      
+
                     </form>
                 </div>
-              <div class="card-footer">
-                        <span> <a href="#">   forget password?</a></span>
-                         <span>Don't have account? <a href="">Click here</span></a>
-                        </div>
+                <div class="card-footer">
+                    <span>
+                        <a href="#"> forget password?</a>
+                    </span>
+                    <span>Don't have account?
+                        <a href="">Click here</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
