--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Port</title>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="content-language" content="en-gb">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>saravanajd</title>
+    <meta property="og:title" content="saravanajd" />
+    <meta property="og:locale" content="en_IN" />
+    <meta name="description" content="saravanajd" />
+    <meta property="og:description" content="saravanajd" />
+    <link rel="canonical" href="https://saravanajd.github.io/index.html" />
+    <meta property="og:url" content="https://saravanajd.github.io/index.html" />
+    <meta property="og:site_name" content="saravanajd" />
+    <script type="application/ld+json">
+        {
+            "name": "Saravanajd",
+            "description": "Saravanajd",
+            "@type": "Saravanajd",
+            "url": "https://saravanajd.github.io/index.html",
+            "headline": "Saravanajd"
+        }
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +36,7 @@
         <div class="main">
             <div class="profile">
                 <div class="profile-detail">
-                    <h3 class="profile-title">{ Loremssara }</h3>
+                    <h1 class="profile-title">{ Saravanan }</h3>
                     <span class="profile-description">
                         #Web Developer #BackEndDeveloper
                     </span>
@@ -30,16 +46,16 @@
                     <span>Follow Me: </span>
                     <ul class="social">
                         <li>
-                            <img src="img/fb.png" alt="">
+                            <a href="#"><img src="img/fb.png" alt="f"></a> 
                         </li>
                         <li>
-                            <img src="img/linkedin.png" alt="">
+                            <a href="#"></a><img src="img/linkedin.png" alt="in"></a> 
                         </li>
                         <li>
-                            <img src="img/github.png" alt="">
+                            <a href="#"></a><img src="img/github.png" alt="g"></a> 
                         </li>
                         <li>
-                            <img src="img/codepen.png" alt="">
+                            <a href="#"></a><img src="img/codepen.png" alt="c"></a> 
                         </li>
                     </ul>
                 </div>
