Optimize for SEO

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="content-language" content="en-gb">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>saravanajd</title>
-    <meta property="og:title" content="saravanajd" />
+    <title>Saravanajd - UI/UX and Web Developer</title>
+    <meta property="og:title" content="Saravanajd - UI/UX and Web Developer" />
     <meta property="og:locale" content="en_IN" />
-    <meta name="description" content="saravanajd" />
-    <meta property="og:description" content="saravanajd" />
+    <meta name="description" content="saravanajd profile page. UI/UX, Web Developer and BackEndDeveloper. Created By Saravanajd" />
+    <meta property="og:description" content="saravanajd profile page. UI/UX, Web Developer and BackEndDeveloper. Created By Saravanajd" />
     <link rel="canonical" href="https://saravanajd.github.io/index.html" />
     <meta property="og:url" content="https://saravanajd.github.io/index.html" />
     <meta property="og:site_name" content="saravanajd" />
     <script type="application/ld+json">
         {
-            "name": "Saravanajd",
-            "description": "Saravanajd",
-            "@type": "Saravanajd",
+            "name": "Saravanajd - UI/UX and Web Developer",
+            "description": "saravanajd profile page. UI/UX, Web Developer and BackEndDeveloper. Created By Saravanajd",
+            "@type": "Website",
             "url": "https://saravanajd.github.io/index.html",
             "headline": "Saravanajd"
         }
     </script>
+    <link rel="shortcut icon" type="img/ico" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
         <div class="main">
             <div class="profile">
                 <div class="profile-detail">
-                    <h1 class="profile-title">{ Saravanan }</h3>
+                    <h1 class="profile-title">{ Saravanan }</h1>
                     <span class="profile-description">
                         #Web Developer #BackEndDeveloper
                     </span>
