Add social media links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             "name": "Saravanajd - UI/UX and Web Developer",
             "description": "saravanajd profile page. UI/UX, Web Developer and BackEndDeveloper. Created By Saravanajd",
             "@type": "Website",
-            "url": "https://saravanajd.github.io/index.html",
+            "url": "https://saravanajd.github.io/",
             "headline": "Saravanajd"
         }
     </script>
@@ -47,16 +47,16 @@
                     <span>Follow Me: </span>
                     <ul class="social">
                         <li>
-                            <a href="#"><img src="img/fb.png" alt="f"></a> 
+                            <a href="https://www.facebook.com/saravanajd" target="_blank"><img src="img/fb.png" alt="f"></a> 
                         </li>
                         <li>
-                            <a href="#"></a><img src="img/linkedin.png" alt="in"></a> 
+                            <a href="https://www.linkedin.com/in/saravanan-s-07440011a/" target="_blank"><img src="img/linkedin.png" alt="in"></a> 
                         </li>
                         <li>
-                            <a href="#"></a><img src="img/github.png" alt="g"></a> 
+                            <a href="https://github.com/saravanajd" target="_blank"><img src="img/github.png" alt="g"></a> 
                         </li>
                         <li>
-                            <a href="#"></a><img src="img/codepen.png" alt="c"></a> 
+                            <a href="https://codepen.io/saravanajd/" target="_blank"><img src="img/codepen.png" alt="c"></a> 
                         </li>
                     </ul>
                 </div>
