Remove jquery. use only javascript

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="icecream.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="keyframes.css">
-
-    <script src="js/jquery.min.js"></script>
-    <script src="app.js"></script>
 </head>
 
 <body>
@@ -283,5 +280,6 @@
             </div>
         </div>
     </section>
+    <script src="main.js" async></script>
 </body>
 </html>
