--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Saravana Jd</title>
+    <title>Saravanan</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <meta property="og:title" content="saravanajd - web developer" />
+    <meta property="og:locale" content="en_IN" />
+    <meta
+      name="description"
+      content="saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd"
+    />
+    <meta
+      property="og:description"
+      content="saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd"
+    />
+    <link rel="canonical" href="https://saravanajd.github.io/index.html" />
+    <meta property="og:url" content="https://saravanajd.github.io/index.html" />
+    <meta property="og:site_name" content="saravanajd" />
+    <script type="application/ld+json">
+      {
+        "name": "saravanajd - web developer",
+        "description": "saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd",
+        "@type": "Website",
+        "url": "https://saravanajd.github.io/",
+        "headline": "Saravanajd"
+      }
+    </script>
 
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="icecream.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="keyframes.css" />
@@ -453,6 +476,6 @@
         </div>
       </div>
     </section>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
