optimizing for seo

--- a/index.html
+++ b/index.html
@@ -4,28 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Saravanan</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-    <meta property="og:title" content="saravanajd - web developer" />
+    <title>saravanajd - web developer - portfolio</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      property="og:title"
+      content="saravanajd - web developer - portfolio"
+    />
     <meta property="og:locale" content="en_IN" />
     <meta
       name="description"
-      content="saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd"
+      content="saravanajd portfolio. I am saravanan and work as a web developer. I've always been passionate about
+      new technology and i am web enthusiast."
     />
     <meta
       property="og:description"
-      content="saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd"
+      content="saravanajd portfolio. I am saravanan and work as a web developer. I've always been passionate about
+      new technology and i am web enthusiast."
     />
-    <link rel="canonical" href="https://saravanajd.github.io/index.html" />
-    <meta property="og:url" content="https://saravanajd.github.io/index.html" />
+    <link rel="canonical" href="https://saravanajd.github.io" />
+    <meta property="og:url" content="https://saravanajd.github.io" />
     <meta property="og:site_name" content="saravanajd" />
     <script type="application/ld+json">
       {
         "name": "saravanajd - web developer",
-        "description": "saravanajd portfolio page.saravanajd is a  web developer. created by saravanajd",
+        "description": "saravanajd portfolio. I am saravanan and work as a web developer. I've always been passionate about
+                new technology and i am web enthusiast.",
         "@type": "Website",
         "url": "https://saravanajd.github.io/",
-        "headline": "Saravanajd"
+        "headline": "saravanajd"
       }
     </script>
 
@@ -35,13 +42,19 @@
     <link rel="stylesheet" href="keyframes.css" />
   </head>
 
-  <body>
+  <body style="background-color: #fff">
     <div class="overlay"></div>
     <div class="" id="menu">
       <div class="container">
         <div class="row">
           <div class="col-2">
-            <img src="favicon-white.png" alt="S" style="margin-top: 1rem;" />
+            <a href="http://saravanajd.github.io">
+              <img
+                src="favicon-white.png"
+                alt="saravanajd"
+                style="margin-top: 1rem;"
+              />
+            </a>
           </div>
           <div class="col-10 menu-sm">
             <div class="top-menu">
@@ -65,10 +78,11 @@
       <div class="container" style="min-height:450px;height:100vh">
         <div class="header">
           <!-- <img class="my-image" src="images/me-nose.gif" alt=""> -->
-          <img class="my-image" src="images/mypicture.jpg" alt="" />
+          <img class="my-image" src="images/mypicture.jpg" alt="saravanajd" />
           <h1>
-            { Saravanan S }
-            <span>Web Developer X Designer</span>
+            <span style="display: none">saravanajd</span>
+            Saravanan S
+            <span>Web Developer</span>
           </h1>
           <div class="btn-group">
             <button class="btn btn-primary" id="btnPortfolio">Projects</button>
@@ -84,7 +98,8 @@
             <li>
               <a
                 class="icon-4 codepen"
-                href="#"
+                href="https://codepen.io/saravanajd/"
+                target="_blank"
                 title="CodePen"
                 preserveAspectRatio="xMidYMid meet"
               >
@@ -97,7 +112,8 @@
             <li>
               <a
                 class="icon-10 facebook"
-                href="#"
+                href="https://www.facebook.com/saravanajd"
+                target="_blank"
                 title="Facebook"
                 preserveAspectRatio="xMidYMid meet"
               >
@@ -111,7 +127,8 @@
             <li>
               <a
                 class="icon-13 github"
-                href="#"
+                href="https://github.com/saravanajd"
+                target="_blank"
                 title="GitHub"
                 preserveAspectRatio="xMidYMid meet"
               >
@@ -125,7 +142,8 @@
             <li>
               <a
                 class="icon-17 linkedin"
-                href="#"
+                href="https://www.linkedin.com/in/saravanan-s-07440011a/"
+                target="_blank"
                 title="LinkedIn"
                 preserveAspectRatio="xMidYMid meet"
               >
@@ -194,7 +212,8 @@
               <li>
                 <a
                   class="icon-4 codepen"
-                  href="#"
+                  href="https://codepen.io/saravanajd/"
+                  target="_blank"
                   title="CodePen"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -207,7 +226,8 @@
               <li>
                 <a
                   class="icon-10 facebook"
-                  href="#"
+                  href="https://www.facebook.com/saravanajd"
+                  target="_blank"
                   title="Facebook"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -221,7 +241,8 @@
               <li>
                 <a
                   class="icon-13 github"
-                  href="#"
+                  href="https://github.com/saravanajd"
+                  target="_blank"
                   title="GitHub"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -235,7 +256,8 @@
               <li>
                 <a
                   class="icon-17 linkedin"
-                  href="#"
+                  href="https://www.linkedin.com/in/saravanan-s-07440011a/"
+                  target="_blank"
                   title="LinkedIn"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -337,7 +359,10 @@
         <div class="row">
           <div class="col-md-6">
             <div class="project">
-              <img src="images/ProjectFiles/SyncThrive_Dashboard.png" alt="" />
+              <img
+                src="images/ProjectFiles/SyncThrive_Dashboard.png"
+                alt="SyncThrive"
+              />
               <div class="details">
                 <h3><span>SyncThrive</span></h3>
                 <a href="#">view details</a>
@@ -348,7 +373,7 @@
             <div class="project">
               <img
                 src="images/ProjectFiles/QPosconnect_dasboard_users.png"
-                alt=""
+                alt="QPosConnect"
               />
               <div class="details">
                 <h3><span>QPosConnect</span></h3>
@@ -358,7 +383,10 @@
           </div>
           <div class="col-md-6">
             <div class="project">
-              <img src="images/ProjectFiles/Pretrip_ReportMain.png" alt="" />
+              <img
+                src="images/ProjectFiles/Pretrip_ReportMain.png"
+                alt="Pretrip"
+              />
               <div class="details">
                 <h3><span>PreTrip</span></h3>
                 <a href="#">view details</a>
@@ -367,7 +395,10 @@
           </div>
           <div class="col-md-6">
             <div class="project">
-              <img src="images/ProjectFiles/freshone_payschedule.png" alt="" />
+              <img
+                src="images/ProjectFiles/freshone_payschedule.png"
+                alt="Freshone"
+              />
               <div class="details">
                 <h3><span>FreshOne</span></h3>
                 <a href="#">view details</a>
@@ -376,7 +407,10 @@
           </div>
           <div class="col-md-6">
             <div class="project">
-              <img src="images/ProjectFiles/Policywise_Main.png" alt="" />
+              <img
+                src="images/ProjectFiles/Policywise_Main.png"
+                alt="Policywise"
+              />
               <div class="details">
                 <h3><span>Policywise</span></h3>
                 <a href="#">view details</a>
@@ -406,7 +440,8 @@
               <li>
                 <a
                   class="icon-4 codepen"
-                  href="#"
+                  href="https://codepen.io/saravanajd/"
+                  target="_blank"
                   title="CodePen"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -419,7 +454,8 @@
               <li>
                 <a
                   class="icon-10 facebook"
-                  href="#"
+                  href="https://www.facebook.com/saravanajd"
+                  target="_blank"
                   title="Facebook"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -433,7 +469,8 @@
               <li>
                 <a
                   class="icon-13 github"
-                  href="#"
+                  href="https://github.com/saravanajd"
+                  target="_blank"
                   title="GitHub"
                   preserveAspectRatio="xMidYMid meet"
                 >
@@ -447,7 +484,8 @@
               <li>
                 <a
                   class="icon-17 linkedin"
-                  href="#"
+                  href="https://www.linkedin.com/in/saravanan-s-07440011a/"
+                  target="_blank"
                   title="LinkedIn"
                   preserveAspectRatio="xMidYMid meet"
                 >
