Update the url version
Update the url version to refresh the service worker file

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" href="asset/css/style.css" />
     <link rel="stylesheet" href="asset/css/jade.css" />
 
-    <script src="asset/js/app.js" defer></script>
+    <script src="asset/js/app.js?v=1" defer></script>
   </head>
   <body>
     <svg class="hero-bg" viewBox="0 0 2184.857 1664.516">
@@ -1957,7 +1957,7 @@
                 expirence in design and development. Specialized in building
                 exceptional websites, applications and everything in between.
               </p>
-              <a href="#" class="btn-link">Get In Touch</a>
+              <a href="#" id="btnContact" class="btn-link">Get In Touch</a>
             </div>
             <div class="scroll">
               <div class="dot"></div>
@@ -2587,7 +2587,7 @@
     </footer>
     <script>
       if (navigator.serviceWorker) {
-        navigator.serviceWorker.register("serviceworker.js")
+        navigator.serviceWorker.register("serviceworker.js?v=2")
       }
     </script>
   </body>
