--- a/index.html
+++ b/index.html
@@ -1919,17 +1919,9 @@
             <li><a href="#Work" data-page="#project">Work</a></li>
             <li><a href="#About" data-page="#about">About</a></li>
             <li><a href="#Contact" data-page="#contact">Contact</a></li>
-            <li><a target="_blank" href="Saravanan_Resume.pdf">Resume</a></li>
+            <li><a target="_blank" href="Saravanan_Resume.pdf?v=1">Resume</a></li>
           </ul>
         </div>
-
-        <!-- <ul class="menu-list">
-          <li><a href="#Home">Home</a></li>
-          <li><a href="#Work">Work</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Contact">Contact</a></li>
-          <li><a href="#Resume">Resume</a></li>
-        </ul> -->
       </nav>
     </header>
     <main>
@@ -1944,15 +1936,8 @@
                 <span style="display: none">Web Developer</span>
               </h1>
               <h2 class="hero-title">I create websites and apps</h2>
-              <!-- <h3 class="hero-title">I create projects that will solve your business tasks and problems</h3> -->
-              <!-- <h3> I build thinks for web</h3>
               <p class="hero-description">
-                I'm a software engineer based in Chennai, TN specializing in
-                building exceptional websites, applications and everything in
-                between
-              </p> -->
-              <p class="hero-description">
-                I'm a senior software engineer from India with 5 years of
+                I'm a senior software engineer from India with 5+ years of
                 expirence in design and development. Specialized in building
                 exceptional websites, applications and everything in between.
               </p>
@@ -2465,6 +2450,7 @@
               <ul class="skill-list">
                 <li>.Net</li>
                 <li>.Net Core</li>
+                <li>SQL</li>
                 <li>Angular</li>
                 <li>Typescript</li>
                 <li>JavaScript (ES6+)</li>
